classDiagram
    direction TB

    %% ════════════════════════════════════════════════════════════════
    %%  ENUMS
    %% ════════════════════════════════════════════════════════════════

    class MenuItemStatus {
        <<enumeration>>
        AVAILABLE
        UNAVAILABLE
        DISABLED
    }

    class OrderStatus {
        <<enumeration>>
        PENDING
        PREPARING
        READY
        DELIVERED
        CANCELLED
    }

    %% ════════════════════════════════════════════════════════════════
    %%  1. AUTHENTICATION & AUTHORIZATION
    %% ════════════════════════════════════════════════════════════════

    namespace Auth {
        class User {
            +int id
            +string name
            +string email
            +string password
            +timestamp email_verified_at
            +datetime created_at
            +datetime updated_at
        }

        class Role {
            +int id
            +string name
            +string guard_name
        }

        class Permission {
            +int id
            +string name
            +string guard_name
        }
    }

    %% ════════════════════════════════════════════════════════════════
    %%  2. PEOPLE
    %% ════════════════════════════════════════════════════════════════

    namespace People {
        class Customer {
            +int id
            +int user_id
            +string phone
            +string address
            +datetime created_at
            +datetime updated_at
        }
    }

    %% ════════════════════════════════════════════════════════════════
    %%  4. MENU MANAGEMENT
    %% ════════════════════════════════════════════════════════════════

    namespace MenuMgmt {
        class Menu {
            +int id
            +string name
            +string description~nullable~
            +datetime valid_from~nullable~
            +datetime valid_until~nullable~
            +boolean is_active
            +int display_order
            +string image_url~nullable~
            +string currency
            +datetime created_at
            +datetime updated_at
        }

        class Category {
            +int id
            +string name
            +string description~nullable~
            +int display_order
            +string icon_url~nullable~
            +boolean is_active
            +datetime created_at
            +datetime updated_at
        }

        class MenuItem {
            +int id
            +string name
            +string description~nullable~
            +decimal price
            +string unit~nullable~
            +MenuItemStatus status
            +string image_url~nullable~
            +datetime created_at
            +datetime updated_at
        }
    }

    %% ════════════════════════════════════════════════════════════════
    %%  5. INVENTORY
    %% ════════════════════════════════════════════════════════════════

    namespace Inventory {
        class InventoryItem {
            +int id
            +string name
            +string reference~nullable~
            +int quantity_in_stock
            +int min_threshold
            +string unit
            +decimal unit_price~nullable~
            +datetime created_at
            +datetime updated_at
        }
    }

    %% ════════════════════════════════════════════════════════════════
    %%  6. ORDER MANAGEMENT
    %% ════════════════════════════════════════════════════════════════

    namespace OrderMgmt {
        class Order {
            +int id
            +OrderStatus status
            +decimal subtotal
            +decimal discount_amount
            +decimal total_amount
            +string payment_method~nullable~
            +string notes~nullable~
            +datetime created_at
            +datetime updated_at
        }

        class OrderItem {
            +int id
            +int quantity
            +decimal unit_price_at_order
            +decimal subtotal
            +datetime created_at
            +datetime updated_at
        }

        class Promotion {
            +int id
            +string code
            +decimal discount_percentage~nullable~
            +decimal discount_amount~nullable~
            +datetime valid_from~nullable~
            +datetime valid_until~nullable~
            +int usage_limit~nullable~
            +datetime created_at
            +datetime updated_at
        }
    }


    %% ════════════════════════════════════════════════════════════════
    %%  RELATIONSHIPS
    %% ════════════════════════════════════════════════════════════════

    %% ── Auth ──
    User "*" --> "*" Role : has
    Role "*" --> "*" Permission : has
    User "*" --> "*" Permission : direct

    %% ── People ↔ Auth (1:1) ──
    User "1" --> "0..1" Customer : profile

    %% ── Menu hierarchy ──
    Menu "1" --> "*" Category : contains
    Category "0..1" --> "*" Category : sub-categories
    Category "1" --> "*" MenuItem : contains

    %% ── Order flow ──
    Customer "1" --> "*" Order : places
    Order "*" --> "0..1" Promotion : applies
    Order "1" --> "*" OrderItem : contains
    OrderItem "*" --> "1" MenuItem : references

    %% ── Enum usage ──
    MenuItemStatus --> MenuItem : status
    OrderStatus --> Order : status
